# setupcfg-generator.py

./: .travis.yml  README.md  requirements.txt  setup.cfg  setup.py
setupcfg_generator/: __init__.py  __main__.py
