# https://pypi.org/project/setupcfg-generator/
[metadata]
name = setupcfg-generator
version = 2019.3.23
url = https://github.com/looking-for-a-job/setupcfg-generator.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = setup.cfg setup

[options]
install_requires = 
	click
	public
	setupcfg
	setuptools
packages = 
	setupcfg_generator
